--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="ikonka.png" type="image/png">
 </head>
 <body>
+    <audio id="myAudio" autoplay>
+        <source src="../inne/saudade, saudade.mp3" type="audio/mp3">
+    </audio>
     <div id="imageContainer">
         <img id="image" src="" alt="Losowy obrazek">
         <button id="randomizeBtn">Wiesz chyba nie na to mam dziś ochotę</button>
