--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img src="inne/emek2.gif" alt="Pieknis slodki w ogole mozna go zjesc aaaa">
     <h2>Ten słodziaczek od dawna pragnie pójść z Tobą na randkę... <p id="tekst" style="text-align: center;">Więc czy chcesz iść?</p></h2>
     <div class="buttons">
-        <button class="ok" onclick="redirectToIndex()">Tak ˶ᵔ ᵕ ᵔ˶</button>
+        <button class="ok" onclick="saveAudioTime()">Tak ˶ᵔ ᵕ ᵔ˶</button>
         <button class="escape">Nie  ˙◠˙</button>
     </div>
 
